fixed padding issue on mobile

--- a/style.scss
+++ b/style.scss
@@ -181,11 +181,13 @@ html.color-theme-in-transition *:after {
   .middlesection {
     display: flex;
     flex-direction: column;
-    padding: 30px 120px;
+    padding: 30px 40px;
+
     margin-top: -80px;
     @media only screen and (min-width: 768px) {
       flex-direction: row;
       justify-content: space-evenly;
+      padding: 30px 120px;
       margin-top: -120px;
     }
     .card-top {
@@ -194,6 +196,7 @@ html.color-theme-in-transition *:after {
       background-color: var(--CardBG);
       padding: 20px 0px;
       text-align: center;
+
       @media only screen and (min-width: 768px) {
         padding: 20px 40px;
         min-width: 220px;
@@ -252,10 +255,11 @@ html.color-theme-in-transition *:after {
   }
 
   .bottomsection {
-    padding: 0px 120px;
+    padding: 0px 40px;
     display: flex;
     flex-direction: column;
     @media only screen and (min-width: 768px) {
+      padding: 0px 120px;
       padding-bottom: 20px;
     }
     h2 {
